- Correction du comportement de collapse-container lors de l'affichage sur Information

--- a/src/components/Collapse/collapse.scss
+++ b/src/components/Collapse/collapse.scss
@@ -2,6 +2,7 @@
 
 .collapse-container{
     position: relative;
+    width: 100%;
 
     .collapse-box{
         display: flex;
